Css of the page and some images

--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,149 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Adedonha</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1>Olá</h1> 
+
+    <div id="home_page">
+        <section>
+            <h2>Adedonha</h2>
+            <div id="enter_room">
+                <input type="text" placeholder="Seu nome...">
+                <input type="text" placeholder="Nome da sala...">
+                <div>
+                    <button>Criar</button>
+                    <button>Entrar</button>
+                </div>
+            </div>
+        </section>
+    </div>
+
+   <div id="main_page">
+    
+    <div id="left_sidebar" class="vertical_octagon">
+        <div>
+            <svg class="nail_icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16"> <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/> <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/> </svg>
+            <ul>
+                <div class="player">
+                    <img src="./images/among_red.PNG" alt="">
+                    <div>
+                        <div>30pts.</div>
+                        <span>Femeuc</span>
+                    </div>
+                </div>
+                <div class="player">
+                    <img src="./images/among_green.PNG" alt="">
+                    <div>
+                        <div>30pts.</div>
+                        <span>Cibitto</span>
+                    </div>
+                </div>
+                <div class="player">
+                    <img src="./images/among_yellow.PNG" alt="">
+                    <div>
+                        <div>30pts.</div>
+                        <span>samuca</span>
+                    </div>
+                </div>
+                <div class="player">
+                    <img src="./images/among_red.PNG" alt="">
+                    <div>
+                        <div>30pts.</div>
+                        <span>Femeuc</span>
+                    </div>
+                </div>
+                <div class="player">
+                    <img src="./images/among_green.PNG" alt="">
+                    <div>
+                        <div>30pts.</div>
+                        <span>Cibitto</span>
+                    </div>
+                </div>
+                <div class="player">
+                    <img src="./images/among_yellow.PNG" alt="">
+                    <div>
+                        <div>30pts.</div>
+                        <span>samuel chupcup span chato pereiras</span>
+                    </div>
+                </div>
+            </ul>
+            <svg class="nail_icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16"> <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/> <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/> </svg>
+        </div>
+    </div>
+
+     <main>
+        <h2>LETRA <span class="type_dash">&nbsp;&nbsp;&nbsp;</span></h2>
+        <div id="inputs_div">
+            <label class="input-div" for="cb1">
+                <div>CEP</div>
+                <input type="text">
+                <span><input type="checkbox" id="cb1"></span>
+            </label>
+            <label class="input-div">
+                <div>CEP</div>
+                <input type="text">
+                <span style="background-image: url('./images/correct_sign.PNG'); background-size:cover;"><input type="checkbox" id="cb1"></span>
+            </label>
+            <label class="input-div" for="cb1">
+                <div>CEP</div>
+                <input type="text">
+                <span><input type="checkbox" id="cb1"></span>
+            </label>
+            <label class="input-div">
+                <div>CEP</div>
+                <input type="text">
+                <span style="background-image: url('./images/correct_sign.PNG'); background-size:cover;"><input type="checkbox" id="cb1"></span>
+            </label>
+            <label class="input-div" for="cb1">
+                <div>CEP</div>
+                <input type="text">
+                <span><input type="checkbox" id="cb1"></span>
+            </label>
+            <label class="input-div">
+                <div>CEP</div>
+                <input type="text">
+                <span style="background-image: url('./images/correct_sign.PNG'); background-size:cover;"><input type="checkbox" id="cb1"></span>
+            </label>
+            <label class="input-div" for="cb1">
+                <div>CEP</div>
+                <input type="text">
+                <span><input type="checkbox" id="cb1"></span>
+            </label>
+            <label class="input-div">
+                <div>CEP</div>
+                <input type="text">
+                <span style="background-image: url('./images/correct_sign.PNG'); background-size:cover;"><input type="checkbox" id="cb1"></span>
+            </label>
+            <label class="input-div" for="cb1">
+                <div>CEP</div>
+                <input type="text">
+                <span><input type="checkbox" id="cb1"></span>
+            </label>
+            <label class="input-div">
+                <div>CEP</div>
+                <input type="text">
+                <span style="background-image: url('./images/correct_sign.PNG'); background-size:cover;"><input type="checkbox" id="cb1"></span>
+            </label>
+        </div>
+        <button>PRÓXIMO</button>
+     </main>
+
+     <div id="right_sidebar">
+        <h3>Bate-papo</h3>
+        <ul>
+            <li>Femeuc: E aí povo?</li>
+            <li>Cibitto: E aí povo? Esse é um exemplo de mensagem grande, será se fica bonito no site...?</li>
+        </ul>
+        <input type="text" placeholder="Mensagem...">
+     </div>
+
+   </div>
+
+   <script src="/socket.io/socket.io.js"></script>
+    <script>
+        var socket = io();
+    </script>
 </body>
 </html>
