--- a/client/index.html
+++ b/client/index.html
@@ -29,108 +29,222 @@
         <div>
             <svg class="nail_icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16"> <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/> <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/> </svg>
             <ul>
-                <div class="player">
-                    <img src="./images/among_red.PNG" alt="">
-                    <div>
-                        <div>30pts.</div>
-                        <span>Femeuc</span>
-                    </div>
-                </div>
-                <div class="player">
-                    <img src="./images/among_green.PNG" alt="">
-                    <div>
-                        <div>30pts.</div>
-                        <span>Cibitto</span>
-                    </div>
-                </div>
-                <div class="player">
-                    <img src="./images/among_yellow.PNG" alt="">
-                    <div>
-                        <div>30pts.</div>
-                        <span>samuca</span>
-                    </div>
-                </div>
-                <div class="player">
-                    <img src="./images/among_red.PNG" alt="">
-                    <div>
-                        <div>30pts.</div>
-                        <span>Femeuc</span>
-                    </div>
-                </div>
-                <div class="player">
-                    <img src="./images/among_green.PNG" alt="">
-                    <div>
-                        <div>30pts.</div>
-                        <span>Cibitto</span>
-                    </div>
-                </div>
-                <div class="player">
-                    <img src="./images/among_yellow.PNG" alt="">
-                    <div>
-                        <div>30pts.</div>
-                        <span>samuel chupcup span chato pereiras</span>
-                    </div>
-                </div>
+                
             </ul>
             <svg class="nail_icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16"> <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/> <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/> </svg>
         </div>
     </div>
 
      <main>
-        <h2>LETRA <span class="type_dash">&nbsp;&nbsp;&nbsp;</span></h2>
-        <div id="inputs_div">
-            <label class="input-div" for="cb1">
-                <div>CEP</div>
-                <input type="text">
-                <span><input type="checkbox" id="cb1"></span>
-            </label>
-            <label class="input-div">
-                <div>CEP</div>
-                <input type="text">
-                <span style="background-image: url('./images/correct_sign.PNG'); background-size:cover;"><input type="checkbox" id="cb1"></span>
-            </label>
-            <label class="input-div" for="cb1">
-                <div>CEP</div>
-                <input type="text">
-                <span><input type="checkbox" id="cb1"></span>
-            </label>
-            <label class="input-div">
-                <div>CEP</div>
-                <input type="text">
-                <span style="background-image: url('./images/correct_sign.PNG'); background-size:cover;"><input type="checkbox" id="cb1"></span>
-            </label>
-            <label class="input-div" for="cb1">
-                <div>CEP</div>
-                <input type="text">
-                <span><input type="checkbox" id="cb1"></span>
-            </label>
-            <label class="input-div">
-                <div>CEP</div>
-                <input type="text">
-                <span style="background-image: url('./images/correct_sign.PNG'); background-size:cover;"><input type="checkbox" id="cb1"></span>
-            </label>
-            <label class="input-div" for="cb1">
-                <div>CEP</div>
-                <input type="text">
-                <span><input type="checkbox" id="cb1"></span>
-            </label>
-            <label class="input-div">
-                <div>CEP</div>
-                <input type="text">
-                <span style="background-image: url('./images/correct_sign.PNG'); background-size:cover;"><input type="checkbox" id="cb1"></span>
-            </label>
-            <label class="input-div" for="cb1">
-                <div>CEP</div>
-                <input type="text">
-                <span><input type="checkbox" id="cb1"></span>
-            </label>
-            <label class="input-div">
-                <div>CEP</div>
-                <input type="text">
-                <span style="background-image: url('./images/correct_sign.PNG'); background-size:cover;"><input type="checkbox" id="cb1"></span>
-            </label>
-        </div>
-        <button>PRÓXIMO</button>
+        <section id="preferences">
+            <div>
+                <h2>Letras permitidas</h2>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="A" id="A">
+                    <label for="A">A</label>
+                </span>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="B" id="B">
+                    <label for="B">B</label>
+                </span>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="C" id="C">
+                    <label for="C">C</label>
+                </span>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="D" id="D">
+                    <label for="D">D</label>
+                </span>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="E" id="E">
+                    <label for="E">E</label>
+                </span>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="F" id="F">
+                    <label for="F">F</label>
+                </span>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="G" id="G">
+                    <label for="G">G</label>
+                </span>
+                <span>
+                    <input onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="H" id="H">
+                    <label for="H">H</label>
+                </span>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="I" id="I">
+                    <label for="I">I</label>
+                </span>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="J" id="J">
+                    <label for="J">J</label>
+                </span>
+                <span>
+                    <input onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="K" id="K">
+                    <label for="K">K</label>
+                </span>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="L" id="L">
+                    <label for="L">L</label>
+                </span>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="M" id="M">
+                    <label for="M">M</label>
+                </span>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="N" id="N">
+                    <label for="N">N</label>
+                </span>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="O" id="O">
+                    <label for="O">O</label>
+                </span>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="P" id="P">
+                    <label for="P">P</label>
+                </span>
+                <span>
+                    <input onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="Q" id="Q">
+                    <label for="Q">Q</label>
+                </span>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="R" id="R">
+                    <label for="R">R</label>
+                </span>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="S" id="S">
+                    <label for="S">S</label>
+                </span>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="T" id="T">
+                    <label for="T">T</label>
+                </span>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="U" id="U">
+                    <label for="U">U</label>
+                </span>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="V" id="V">
+                    <label for="V">V</label>
+                </span>
+                <span>
+                    <input onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="X" id="X">
+                    <label for="X">X</label>
+                </span>
+                <span>
+                    <input onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="W" id="W">
+                    <label for="W">W</label>
+                </span>
+                <span>
+                    <input onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="Y" id="Y">
+                    <label for="Y">Y</label>
+                </span>
+                <span>
+                    <input onchange="checkbox_onchange(this, 'letter')" class="letter" type="checkbox" value="Z" id="Z">
+                    <label for="Z">Z</label>
+                </span>
+            </div>
+            <div>
+                <h2>Temas padrões</h2>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'standard')" class="standard" type="checkbox" value="países" id="país">
+                    <label for="país">país</label>
+                </span>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'standard')" class="standard" type="checkbox" value="adjetivo" id="adjetivo">
+                    <label for="adjetivo">adjetivo</label>
+                </span>
+                <span>
+                    <input onchange="checkbox_onchange(this, 'standard')" class="standard" type="checkbox" value="jogo" id="jogo">
+                    <label for="jogo">jogo</label>
+                </span>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'standard')" class="standard" type="checkbox" value="comida" id="comida">
+                    <label for="comida">comida</label>
+                </span>
+                <span>
+                    <input checked onchange="checkbox_onchange(this, 'standard')" class="standard" type="checkbox" value="animal" id="animal">
+                    <label for="animal">animal</label>
+                </span>
+            </div>
+            <div id="custom_topics_div">
+                <h2>Temas personalizados</h2>
+                <span>
+                    <input onchange="checkbox_onchange(this, 'custom')" class="custom" type="checkbox" value="doença" id="doença">
+                    <label for="doença">doença</label>
+                </span>
+                <span>
+                    <input onchange="checkbox_onchange(this, 'custom')" class="custom" type="checkbox" value="carro" id="carro">
+                    <label for="carro">carro</label>
+                </span>
+                <span>
+                    <input onchange="checkbox_onchange(this, 'custom')" class="custom" type="checkbox" value="time de futebol" id="time de futebol">
+                    <label for="time de futebol">time de futebol</label>
+                </span>
+            </div>
+            <div id="add_custom_topic_div">
+                <input type="text" placeholder="Tema personalizado..." id="custom_topic">
+                <button id="custom_topic" onclick="add_custom_topic()">Adicionar</button>
+                <button id="start_button" onclick="start_game()">Começar</button>
+            </div>
+        </section>
+        
+        <section id="validation">
+            <h2>LETRA <span class="type_dash">&nbsp;&nbsp;&nbsp;</span></h2>
+            <div id="inputs_div">
+                <label class="input-div" for="cb1">
+                    <div>CEP</div>
+                    <input type="text">
+                    <span><input type="checkbox" id="cb1"></span>
+                </label>
+                <label class="input-div">
+                    <div>CEP</div>
+                    <input type="text">
+                    <span style="background-image: url('./images/correct_sign.PNG'); background-size:cover;"><input type="checkbox" id="cb1"></span>
+                </label>
+                <label class="input-div" for="cb1">
+                    <div>CEP</div>
+                    <input type="text">
+                    <span><input type="checkbox" id="cb1"></span>
+                </label>
+                <label class="input-div">
+                    <div>CEP</div>
+                    <input type="text">
+                    <span style="background-image: url('./images/correct_sign.PNG'); background-size:cover;"><input type="checkbox" id="cb1"></span>
+                </label>
+                <label class="input-div" for="cb1">
+                    <div>CEP</div>
+                    <input type="text">
+                    <span><input type="checkbox" id="cb1"></span>
+                </label>
+                <label class="input-div">
+                    <div>CEP</div>
+                    <input type="text">
+                    <span style="background-image: url('./images/correct_sign.PNG'); background-size:cover;"><input type="checkbox" id="cb1"></span>
+                </label>
+                <label class="input-div" for="cb1">
+                    <div>CEP</div>
+                    <input type="text">
+                    <span><input type="checkbox" id="cb1"></span>
+                </label>
+                <label class="input-div">
+                    <div>CEP</div>
+                    <input type="text">
+                    <span style="background-image: url('./images/correct_sign.PNG'); background-size:cover;"><input type="checkbox" id="cb1"></span>
+                </label>
+                <label class="input-div" for="cb1">
+                    <div>CEP</div>
+                    <input type="text">
+                    <span><input type="checkbox" id="cb1"></span>
+                </label>
+                <label class="input-div">
+                    <div>CEP</div>
+                    <input type="text">
+                    <span style="background-image: url('./images/correct_sign.PNG'); background-size:cover;"><input type="checkbox" id="cb1"></span>
+                </label>
+            </div>
+            <button>PRÓXIMO</button>
+        </section>
      </main>
 
      <div id="right_sidebar">
@@ -148,7 +262,7 @@
     <script>
         var socket = io();
     </script>
-    <script src="./socketio_events.js"></script>
     <script src="./scripts.js"></script>
+    <script src="./socketio_events.js"></script>
 </body>
 </html>
