--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
         <section>
             <h2>Adedonha</h2>
             <div id="enter_room">
-                <input type="text" placeholder="Seu nome..." autofocus>
+                <input type="text" placeholder="Seu nome..." autofocus id="username_input">
                 <input type="text" placeholder="Nome da sala...">
                 <div>
                     <button onclick="create_room()">Criar</button>
