checkboxes on change event sinc

--- a/client/index.html
+++ b/client/index.html
@@ -42,155 +42,129 @@
             <!--#region Alphabet Letters -->
             <div>
                 <h2>Letras permitidas</h2>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>A</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>B</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>C</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>D</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>E</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>F</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>G</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox"> <input type="checkbox"> </span>
-                    <span>H</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>I</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>J</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox"> <input type="checkbox"> </span>
-                    <span>K</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>L</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>M</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>N</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>O</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>P</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox"> <input type="checkbox"> </span>
-                    <span>Q</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>R</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>S</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>T</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>U</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>V</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox"> <input type="checkbox"> </span>
-                    <span>X</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox"> <input type="checkbox"> </span>
-                    <span>W</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox"> <input type="checkbox"> </span>
-                    <span>Y</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox"> <input type="checkbox"> </span>
-                    <span>Z</span>
-                </span>
+                <div id="letters">
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox checked"> <input type="checkbox" checked> </span>
+                        <span>A</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox checked"> <input type="checkbox" checked> </span>
+                        <span>B</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox checked"> <input type="checkbox" checked> </span>
+                        <span>C</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox checked"> <input type="checkbox" checked> </span>
+                        <span>D</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox checked"> <input type="checkbox" checked> </span>
+                        <span>E</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox checked"> <input type="checkbox" checked> </span>
+                        <span>F</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox checked"> <input type="checkbox" checked> </span>
+                        <span>G</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox"> <input type="checkbox"> </span>
+                        <span>H</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox checked"> <input type="checkbox" checked> </span>
+                        <span>I</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox checked"> <input type="checkbox" checked> </span>
+                        <span>J</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox"> <input type="checkbox"> </span>
+                        <span>K</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox checked"> <input type="checkbox" checked> </span>
+                        <span>L</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox checked"> <input type="checkbox" checked> </span>
+                        <span>M</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox checked"> <input type="checkbox" checked> </span>
+                        <span>N</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox checked"> <input type="checkbox" checked> </span>
+                        <span>O</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox checked"> <input type="checkbox" checked> </span>
+                        <span>P</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox"> <input type="checkbox"> </span>
+                        <span>Q</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox checked"> <input type="checkbox" checked> </span>
+                        <span>R</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox checked"> <input type="checkbox" checked> </span>
+                        <span>S</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox checked"> <input type="checkbox" checked> </span>
+                        <span>T</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox checked"> <input type="checkbox" checked> </span>
+                        <span>U</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox checked"> <input type="checkbox" checked> </span>
+                        <span>V</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox"> <input type="checkbox"> </span>
+                        <span>X</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox"> <input type="checkbox"> </span>
+                        <span>W</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox"> <input type="checkbox"> </span>
+                        <span>Y</span>
+                    </span>
+                    <span class="checkbox_container" onclick="toggle_checkbox(this)">
+                        <span class="checkbox"> <input type="checkbox"> </span>
+                        <span>Z</span>
+                    </span>
+                </div>
             </div>
             <!-- #endregion-->
             <!--#region Default topics-->
             <div>
                 <h2>Temas padrões</h2>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>Animais</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>Países</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>FVL (fruts, legumes, verduras)</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>Objeto</span>
-                </span>
+                <div id="default">
+                </div>
             </div>
             <!--#endregion-->
             <!--#region Custom topics-->
             <div id="custom_topics_div">
                 <h2>Temas personalizados</h2>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>Doenças</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>Rimas com ÃO</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>Rimas com ADE</span>
-                </span>
-                <span class="checkbox_container" onclick="toggle_checkbox(this)">
-                    <span class="checkbox checked"> <input type="checkbox" checked> </span>
-                    <span>Rimas com EZA</span>
-                </span>
+                <div id="custom">
+                </div>
             </div>
             <!--#endregion-->
-            <div id="add_custom_topic_div">
+            <div id="add_custom_topic_div" class="host_only">
                 <input type="text" placeholder="Tema personalizado..." id="custom_topic">
                 <button id="custom_topic" onclick="add_custom_topic()">Adicionar</button>
                 <button id="start_button" onclick="start_game()">Começar</button>
